vignettes build and package ~3.7MB

--- a/invitroTKstats/vignettes/Caco2_vignette.Rmd
+++ b/invitroTKstats/vignettes/Caco2_vignette.Rmd
@@ -187,7 +187,7 @@ caco2_L1_curated <- format_caco2(FILENAME = "Caco2_vignette",
                                  compound.col = "Compound",
                                  area.col = "Peak.Area",
                                  istd.col = "ISTD.Peak.Area",
-                                 compound.conc.col = "Compound.Conc",
+                                 test.conc.col = "Compound.Conc",
                                  analysis.method.col = "Analysis.Params",
                                  # columns not present in L0 data
                                  biological.replicates = 1,
@@ -196,7 +196,7 @@ caco2_L1_curated <- format_caco2(FILENAME = "Caco2_vignette",
                                  cal = 1,
                                  time = 2, 
                                  istd.conc = 1,
-                                 nominal.test.conc = 10,
+                                 test.nominal.conc = 10,
                                  analysis.instrument = "Agilent.GCMS",
                                  analysis.parameters = "Unknown",
                                  note.col = NULL,
