--- a/invitroTKstats/vignettes/Clint_vignette.Rmd
+++ b/invitroTKstats/vignettes/Clint_vignette.Rmd
@@ -427,7 +427,6 @@ To run Level 4, one needs to have JAGS installed on their machine. To determine 
 We pass `clint_L2_curated`, the Level 2 data frame, and **not** `clint_L3_curated`, the Level 3 data frame, into `calc_clint`. This is because Level 3 and Level 4 processing are not sequential; they are methods that calculate different statistical quantities. 
 
 ```{r L4 Processing, message= FALSE}
-
 clint_L4_curated <- calc_clint(FILENAME = "Clint_vignette",
                        data.in = clint_L2_curated, 
                        JAGS.PATH = runjags::findjags()
@@ -468,6 +467,131 @@ Shibata, Y., Takahashi, H., Chiba, M., & Ishii, Y. (2002). Prediction of hepatic
 ## Appendix
 
 ### L4 Bayesian Modeling Information
+
+##### Measurement Model
+
+$$ log(\sigma_a)_w \sim Unif(-6,1); \space \sigma_{a,w} = 10^{log(\sigma_a)_w} $$
+$$ log(m_h)_w \sim Unif(-6,1); \space m_{h,w} = 10^{log(m_h)_w} $$
+
+$$ C_{thresh,w} \sim Unif(0,\frac{conc_{target,w}}{10})$$
+
+$$ log(cal)_w \sim N(0,0.01); \space cal_w = 10^{log(cal)_w}$$
+
+$$ \gamma_w \sim Exp(100)$$
+
+where $w$ indicates the calibration index and $w = (1,...,n_{cal})$ such that $n_{cal}$ is the total number of mass-spectrometry calibrations.
+
+##### Likelihood for Blank Observations
+
+$$ y_{blank,i} \sim N(x_{blank,w^*_i}= \frac{\gamma_{w^*_i}}{df_{blank,w^*_i}},p_{blank,w^*_i} = \frac{1}{(\sigma_{a,w^*_i} + m_{h,w^*_i} *x_{blank,w^*_i})^2}) $$
+where $y_{blank,i}$ is the $i^{th}$ blank observation and $w^*_i$ is the calibration index for that observation, such that $w^* = (w^*_1,...,w^*_{n_{blank}})$ and $w^*_i \in w$ (i.e. $w^*_i$ indicates one of the calibrations).
+
+##### Likelihood for Calibration Curve
+
+$$ m_{cc,i} = cal_{w^*_i}$$
+
+$$ \alpha_{cc,i} = \gamma_{w^*_i}$$
+
+$$
+\beta_{cc,i} =
+\begin{cases}
+1 & if \space (\frac{y_{cc,i}}{df_{cc,i}} - \frac{C_{thresh,w^*_i}}{df_{cc,i}}) \ge 0 \\
+0 & o.w. 
+\end{cases}
+$$
+
+$$ y_{cc,i} \sim N(x_{cc,i} = m_{cc,i} * (\frac{y_{cc,i}}{df_{cc,i}} - \frac{C_{thresh,w^*_i}}{df_{cc,i}}) * \beta_{cc,i} + \frac{\alpha_{cc,i}}{df_{cc,i}},p_{cc,i} = \frac{1}{(\sigma_{a,w^*_i} + m_{h,w^*_i} * x_{cc,i})^2})$$
+
+where $y_{cc,i}$ is the $i^{th}$ calibration-curve observation (sample type = `CC`) and $w^*_i$ is the calibration index for that observation, such that $u^* = (u^*_1,...,u^*_{n_{cc}})$ and $w^*_i \in w$ (i.e. $w^*_i$ indicates one of the calibrations).
+
+##### Clearance Model
+
+$$ d_c \sim Bern(p_{d_c}) $$
+
+$$ \delta_{bio} \sim Unif(0,-log(\frac{C_{thresh}}{conc_{target}}))$$
+
+$$ \delta_{bio,1} = d_c * \delta_{bio} $$
+
+$$ s_f \sim Bern(p_{s_f})$$
+
+$$ s_a \sim Unif(0,1) $$
+
+**Slope at the Lower Initial Concentration**:
+$$ m_1 = d_c * \delta_{bio} + d_g * \delta_{abio} $$
+
+**Slope at the Higher Initial Concentration**:
+
+$$ m_2 = d_g * \delta_{abio} + d_c * \delta_{bio} *(1-s_f*s_a) $$
+**Exponential Decay**:
+
+$$ C_i = conc_{target,c^*_i}*exp(-m_{c^*_i}*t_i) $$
+where $m_{c^*_i} \in \{m_1,m_2\}$.
+
+$$
+\beta_i = 
+\begin{cases}
+1 & if \space \frac{C_i}{df_i} - \frac{C_{thresh,c^*_i}}{df_i} \ge 0 \\
+0 & o.w.
+\end{cases}
+$$
+
+$$ y_i \sim N(x_i = cal * (\frac{C_i}{df_i} - \frac{C_{thresh,c^*_i}}{df_i}) * \beta + \frac{\gamma}{df},p_i = \frac{1}{(\sigma_{a,c^*_i} + m_{h,c^*_i}*x_i)^2})$$
+
+where $y_i$ is the $i^{th}$ observation $i = (1,..., n)$ and $c^*_i$ represents the concentration index for the observation $c^* = (c^*_1,...,c^*_n)$.
+
+##### Non-biological Clearance Model
+
+$$ \delta_{abio} \sim Unif(0,-log(\frac{C_{thresh}}{conc_{target}}))$$
+
+$$ d_g \sim Bern(p_{d_g}) $$
+
+$$ m_{abio} = d_g * \delta_{abio} $$
+
+$$ C_{abio,i} = conc_{target,k^*_i} * exp(-m_{abio}*t_{abio,i}) $$
+$$
+\beta_{abio,i} = 
+\begin{cases}
+1 & if \space (\frac{C_{abio,i}}{df_{abio,i}} - \frac{C_{thresh,k^*_i}}{df_{abio,i}}) \ge 0 \\
+0 & o.w.
+\end{cases}
+$$
+
+$$ y_{abio,i} \sim N(x_{abio,i} = cal_{k^*_i} * (\frac{C_{abio,i}}{df_{abio,i}} - \frac{C_{thresh,k^*_i}}{df_{abio,i}}) * \beta_{abio,i} + \frac{\gamma_{k^*_i}}{df_{abio,i}},p_{abio,i} = \frac{1}{(\sigma_{a,k^*_i} + m_{h,k^*_i} * x_{abio,i})^2}) $$
+
+where $y_{abio,i}$ is the $i^{th}$ non-biological observation $i = (1,..., n_{abio})$ and $k^*_i$ represents the calibration index for the non-biological observation $k^* = (k^*_1,...,k^*_{n_abio})$.
+
+#### Estimates post-MCMC
+
+Conversion of disappearance rates (1/hr) to hepatic clearance ($\mu L/min/10^6$) for $1 \mu M$:
+
+$$ \mathbf{Clint.1} = 1000*\frac{m_{bio,1 \mu M}}{\rho_{hep}*60} $$
+where $\rho_{hep}$ is the hepatic density and $m_{bio,1 \mu M}$ is the slope for "bio" at $1 \mu M$.
+
+
+Conversion of disappearance rates (1/hr) to hepatic clearance ($\mu L/min/10^6$) for $10 \mu M$:
+
+$$ \mathbf{Clint.10} = 1000*\frac{m_{bio,10 \mu M}}{\rho_{hep}*60} $$
+where $\rho_{hep}$ is the hepatic density and $m_{bio,1 \mu M}$ is the slope for "bio" at $10 \mu M$.
+
+Posterior probability for intrinsic hepatic clearance:
+
+$$ \mathbf{Clint.pValue} = \frac{\sum_{k=1}^{n_{M}} d_{c,k} }{n_{M}}$$
+
+where $n_{M}$ is the number of MCMC iterations and $d_{c,k}$ is the binary result for MCMC iteration $k$ indicating whether the chemical decreases (i.e. is biologically cleared).
+
+Posterior probability for the chemical saturation:
+
+$$ \mathbf{Sat.pValue} = \frac{\sum_{k=1}^{n_{M}}s_{f,k}}{n_{M}} $$
+
+where $n_{M}$ is the number of MCMC iterations and $s_{f,k}$ is the binary result for MCMC iteration $k$ indicating whether the saturation is hit in each of the MCMC iterations.
+
+Posterior probability of the chemical degradation:
+
+$$ \mathbf{degrades.pValue} = \frac{\sum_{k=1}^{n_{M}}d_{g,k}}{n_{M}}$$
+
+where $n_{M}$ is the number of MCMC iterations and $d_{g,k}$ is the binary result for MCMC iteration $k$ indicating whether the chemical degradation is hit (i.e. is non-biologically cleared).
+
+### JAGS to L4 Equation Notation Tables
 
 |       Data        |   Denotation    |
 |-------------------|-----------------|
@@ -515,103 +639,3 @@ Shibata, Y., Takahashi, H., Chiba, M., & Ishii, Y. (2002). Prediction of hepatic
 | DECREASE.PROB | $p_{d_c}$ | |
 | DEGRADES.PROB | $p_{d_g}$ | |
 | SATURATE.PROB | $p_{s_f}$ | |
-
-#### JAGS 
-
-##### Measurement Model
-
-$$ log(\sigma_a) \sim Unif(-6,1); \space \sigma_a = 10^{log(\sigma_a)} $$
-$$ log(m_h) \sim Unif(-6,1); \space m_h = 10^{log(m_h)} $$
-
-$$ C_{thresh} \sim Unif(0,\frac{conc_{target}}{10})$$
-
-$$ log(cal) \sim N(0,0.01); \space cal = 10^{log(cal)}$$
-
-$$ \gamma \sim Exp(100)$$
-
-##### Likelihood for Blank Observations
-
-$$ y_{blank} \sim N(x_{blank}= \frac{\gamma}{df_{blank}},p_{blank} = \frac{1}{(\sigma_a + m_h *x_{blank})^2}) $$
-
-##### Likelihood for Calibration Curve
-
-$$
-\beta_{cc} =
-\begin{cases}
-1 & if \space (\frac{y_{cc}}{df_{cc}} - \frac{C_{thresh}}{df_{cc}}) \ge 0 \\
-0 & o.w. 
-\end{cases}
-$$
-
-
-$$ y_{cc} \sim N(x_{cc} = m_{cc} * (\frac{y_{cc}}{df_{cc}} - \frac{C_{thresh}}{df_{cc}}) * \beta_{cc} + \frac{\alpha_{cc}}{df_{cc}},p_{cc} = \frac{1}{(\sigma_a + m_h * x_{cc})^2})$$
-
-##### Clearance Model
-
-$$ d_c \sim Bern(p_{d_c}) $$
-$$ d_g \sim Bern(p_{d_g}) $$
-$$ \delta_{bio} \sim Unif(0,-log(\frac{C_{thresh}}{conc_{target}}))$$
-
-$$ \delta_{abio} \sim Unif(0,-log(\frac{C_{thresh}}{conc_{target}}))$$
-$$ m_1 = d_c * \delta_{bio} + d_g * \delta_{abio} $$
-$$ \delta_{bio,1} = d_c * \delta_{bio} $$
-$$ s_f \sim Bern(p_{s_f})$$
-$$ s_a \sim Unif(0,1) $$
-$$ m_2 = d_g * \delta_{abio} + d_c * \delta_{bio} *(1-s_f*s_a) $$
-$$ C = conc_{target}*exp(-m) $$
-
-$$
-\beta = 
-\begin{cases}
-1 & if \space \frac{C}{df} - \frac{C_{thresh}}{df} \ge 0 \\
-0 & o.w.
-\end{cases}
-$$
-
-$$ y \sim N(x = cal * (\frac{C}{df} - \frac{C_{thresh}}{df}) * \beta + \frac{\gamma}{df},p = \frac{1}{(\sigma_a + m_h*x)^2})$$
-
-##### Non-biological Clearance Model
-
-$$ m_{abio} = d_g * \delta_{abio} $$
-
-$$ C_{abio} = conc_{target} * exp(-m_{abio}*t_{abio}) $$
-$$
-\beta_{abio} = 
-\begin{cases}
-1 & if \space (\frac{C_{abio}}{df_{abio}} - \frac{C_{thresh}}{df_{abio}}) \ge 0 \\
-0 & o.w.
-\end{cases}
-$$
-
-$$ y_{abio} \sim N(x_{abio} = cal * (\frac{C_{abio}}{df_{abio}} - \frac{C_{thresh}}{df_{abio}}) * \beta_{abio} + \frac{\gamma}{df_{abio}},p_{abio} = \frac{1}{(\sigma_a + m_h * x_{abio})^2}) $$
-
-#### Estimates post-MCMC
-
-Conversion of disappearance rates (1/hr) to hepatic clearance ($\mu L/min/10^6$) for $1 \mu M$:
-
-$$ \mathbf{Clint.1} = 1000*\frac{m_{bio,1 \mu M}}{\rho_{hep}*60} $$
-where $\rho_{hep}$ is the hepatic density and $m_{bio,1 \mu M}$ is the slope for "bio" at $1 \mu M$.
-
-
-Conversion of disappearance rates (1/hr) to hepatic clearance ($\mu L/min/10^6$) for $10 \mu M$:
-
-$$ \mathbf{Clint.10} = 1000*\frac{m_{bio,10 \mu M}}{\rho_{hep}*60} $$
-where $\rho_{hep}$ is the hepatic density and $m_{bio,1 \mu M}$ is the slope for "bio" at $10 \mu M$.
-
-Posterior probability for intrinsic hepatic clearance:
-
-$$ \mathbf{Clint.pValue} = \frac{\sum_{k=1}^{n_{M}} d_{c,k} }{n_{M}}$$
-
-where $n_{M}$ is the number of MCMC iterations and $d_{c,k}$ is the binary result for MCMC iteration $k$ indicating whether the chemical decreases (i.e. is biologically cleared).
-
-Posterior probability for the chemical saturation:
-
-$$ \mathbf{Sat.pValue} = \frac{\sum_{k=1}^{n_{M}}s_{f,k}}{n_{M}} $$
-
-where $n_{M}$ is the number of MCMC iterations and $s_{f,k}$ is the binary result for MCMC iteration $k$ indicating whether the saturation is hit in each of the MCMC iterations.
-
-Posterior probability of the chemical degradation:
-
-$$ \mathbf{degrades.pValue} = \frac{\sum_{k=1}^{n_{M}}d_{g,k}}{n_{M}}$$
-
-where $n_{M}$ is the number of MCMC iterations and $d_{g,k}$ is the binary result for MCMC iteration $k$ indicating whether the chemical degradation is hit (i.e. is non-biologically cleared).
