remove devtools::load_all() and replace with library call

--- a/invitroTKstats/vignettes/Data-guide-and-L0_vignette.Rmd
+++ b/invitroTKstats/vignettes/Data-guide-and-L0_vignette.Rmd
@@ -57,8 +57,7 @@ manuscript for demonstration purposes.
 
 ```{r setup,message=FALSE,warning=FALSE}
 # Primary Package #
-# library(invitroTKstats)
-devtools::load_all(here::here())
+library(invitroTKstats)
 # Data Formatting Packages #
 library(dplyr)
 library(magrittr)
