updated READMEs, data descriptions, and added bib entry for Caco2 dataset

--- a/invitroTKstats/inst/REFERENCES.bib
+++ b/invitroTKstats/inst/REFERENCES.bib
@@ -96,3 +96,13 @@
   year={2011},
   publisher={Sage Journals}
 }
+
+@article{honda2025impact,
+  title={Impact of gut permeability on estimation of oral bioavailability for chemicals in commerce and the environment},
+  author={Honda, Gregory S and Kenyon, Elaina M and Davidson-Fritz, Sarah and Dinallo, Roger and El Masri, Hisham and Korol-Bexell, Evgenia and Li, Li and Angus, Derek and Pearce, Robert G and Sayre, Risa R and others},
+  journal={ALTEX-Alternatives to animal experimentation},
+  volume={42},
+  number={1},
+  pages={56--74},
+  year={2025}
+}
